validate value of matches